<resources>
    <string name="app_name">ABNR News</string>

    <string name="fragment_title_headline">Headlines</string>
    <string name="fragment_title_mynews">My News</string>
    <string name="fragment_title_entertainment">Entertainment</string>
    <string name="fragment_title_business">Business</string>
    <string name="fragment_title_sports">Sport</string>
    <string name="fragment_title_science">Science</string>
    <string name="fragment_title_health">Health</string>
    <string name="fragment_title_technology">Tech</string>


    <string name="country_array_label">Select country</string>
    <!--Country keys-->
    <string name="key_country_ArabEmirates">ae</string>
    <string name="key_country_Argentina">ar</string>
    <string name="key_country_Austria">at</string>
    <string name="key_country_Australia">au</string>
    <string name="key_country_Belgia">be</string>
    <string name="key_country_Bulgaria">bg</string>
    <string name="key_country_Brazil">br</string>
    <string name="key_country_Canada">ca</string>
    <string name="key_country_Switzerland">ch</string>
    <string name="key_country_China">cn</string>
    <string name="key_country_Columbia">co</string>
    <string name="key_country_Cuba">cu</string>
    <string name="key_country_Cehia">cz</string>
    <string name="key_country_Germany">de</string>
    <string name="key_country_Egipt">eg</string>
    <string name="key_country_France">fr</string>
    <string name="key_country_GreatBritain">gb</string>
    <string name="key_country_Greece">gr</string>
    <string name="key_country_HongKong">hk</string>
    <string name="key_country_Hungary">hu</string>
    <string name="key_country_Indonesia">id</string>
    <string name="key_country_Irlanda">ie</string>
    <string name="key_country_Israel">il</string>
    <string name="key_country_India">in</string>
    <string name="key_country_Italy">it</string>
    <string name="key_country_Japan">jp</string>
    <string name="key_country_SouthCorea">kr</string>
    <string name="key_country_Lithuania">lt</string>
    <string name="key_country_Letonia">lv</string>
    <string name="key_country_Monaco">ma</string>
    <string name="key_country_Mexic">mx</string>
    <string name="key_country_Malaesya">my</string>
    <string name="key_country_Nigeria">ng</string>
    <string name="key_country_Netherland">nl</string>
    <string name="key_country_Norvegia">no</string>
    <string name="key_country_NewZeeland">nz</string>
    <string name="key_country_Philipine">ph</string>
    <string name="key_country_Poland">pl</string>
    <string name="key_country_Portugal">pt</string>
    <string name="key_country_Romania">ro</string>
    <string name="key_country_Serbia">rs</string>
    <string name="key_country_Rusia">ru</string>
    <string name="key_country_ArabiaSaudita">sa</string>
    <string name="key_country_Suedia">se</string>
    <string name="key_country_Singapore">sg</string>
    <string name="key_country_Slovenia">si</string>
    <string name="key_country_Slovacia">sk</string>
    <string name="key_country_Thailanda">th</string>
    <string name="key_country_Turkey">tr</string>
    <string name="key_country_Taiwan">tw</string>
    <string name="key_country_Ucraina">ua</string>
    <string name="key_country_UnitedStates">us</string>
    <string name="key_country_Venezuela">ve</string>
    <string name="key_country_SouthAfrica">za</string>

    <!-- Country labels-->
    <string name="label_country_ArabEmirates">Arab Emirates</string>
    <string name="label_country_Argentina">Argentine</string>
    <string name="label_country_Austria">Austria</string>
    <string name="label_country_Australia">Australia</string>
    <string name="label_country_Belgia">Belgium</string>
    <string name="label_country_Bulgaria">Bulgary</string>
    <string name="label_country_Brazil">Brasil</string>
    <string name="label_country_Canada">Canada</string>
    <string name="label_country_Switzerland">Switzerland</string>
    <string name="label_country_China">China</string>
    <string name="label_country_Columbia">Columbia</string>
    <string name="label_country_Cuba">Cuba</string>
    <string name="label_country_Cehia">Czech Republic</string>
    <string name="label_country_Germany">Germany</string>
    <string name="label_country_Egipt">Egypt</string>
    <string name="label_country_France">France</string>
    <string name="label_country_GreatBritain">Great Britain</string>
    <string name="label_country_Greece">Greece</string>
    <string name="label_country_HongKong">Hong Kong</string>
    <string name="label_country_Hungary">Hungary</string>
    <string name="label_country_Indonesia">Indonesia</string>
    <string name="label_country_Irlanda">Irland</string>
    <string name="label_country_Israel">Israel</string>
    <string name="label_country_India">India</string>
    <string name="label_country_Italy">Italy</string>
    <string name="label_country_Japan">Japan</string>
    <string name="label_country_SouthCorea">South Corea</string>
    <string name="label_country_Lithuania">Lithuania</string>
    <string name="label_country_Letonia">Latvia</string>
    <string name="label_country_Monaco">Monaco</string>
    <string name="label_country_Mexic">Mexico</string>
    <string name="label_country_Malaesya">Malaysia</string>
    <string name="label_country_Nigeria">Nigeria</string>
    <string name="label_country_Netherland">Netherland</string>
    <string name="label_country_Norvegia">Norway</string>
    <string name="label_country_NewZeeland">New Zealand</string>
    <string name="label_country_Philipine">Philippines</string>
    <string name="label_country_Poland">Poland</string>
    <string name="label_country_Portugal">Portugal</string>
    <string name="label_country_Romania">Romania</string>
    <string name="label_country_Serbia">Serbia</string>
    <string name="label_country_Rusia">Russia</string>
    <string name="label_country_ArabiaSaudita">Saudi Arabia</string>
    <string name="label_country_Suedia">Sweeden</string>
    <string name="label_country_Singapore">Singapore</string>
    <string name="label_country_Slovenia">Slovenia</string>
    <string name="label_country_Slovacia">Slovakia</string>
    <string name="label_country_Thailanda">Thailand</string>
    <string name="label_country_Turkey">Turkey</string>
    <string name="label_country_Taiwan">Taiwan</string>
    <string name="label_country_Ucraina">Ukraine</string>
    <string name="label_country_UnitedStates">United States</string>
    <string name="label_country_Venezuela">Venezuela</string>
    <string name="label_country_SouthAfrica">South Africa</string>

    <!--Values for languages -->
    <string name="value_language_Arabic">ar</string>
    <string name="value_language_German">de</string>
    <string name="value_language_English">en</string>
    <string name="value_language_Spanish">es</string>
    <string name="value_language_French">fr</string>
    <string name="value_language_Hebrew">he</string>
    <string name="value_language_Italian">it</string>
    <string name="value_language_Dutch">nl</string>
    <string name="value_language_Norwegian">no</string>
    <string name="value_language_Portughese">pt</string>
    <string name="value_language_Rusian">ru</string>
    <string name="value_language_Swedish">se</string>
    <string name="value_language_Chinese">zh</string>
    <string name="value_language_Default"> </string>

    <string name="label_language_Arabic">Arabic</string>
    <string name="label_language_German">Deutsch</string>
    <string name="label_language_English">English</string>
    <string name="label_language_Spanish">Espanol</string>
    <string name="label_language_French">Francais</string>
    <string name="label_language_Hebrew">Hebrew</string>
    <string name="label_language_Italian">Italiano</string>
    <string name="label_language_Dutch">Nederlands</string>
    <string name="label_language_Norwegian">Norsk</string>
    <string name="label_language_Portughese">Portuguese</string>
    <string name="label_language_Rusian">Russian</string>
    <string name="label_language_Chinese">Chinese</string>
    <string name="label_language_default">Default</string>

    <string name="pref_sortBy_key">SortBy</string>
    <string name="pref_sortBy_default">publishedAt</string>

    <string name="label_sort_relevancy">Relevance</string>
    <string name="label_sort_popularity">Popularity</string>
    <string name="label_sort_date">Date</string>

    <string name="value_sort_relevancy">relevancy</string>
    <string name="value_sort_popularity">popularity</string>
    <string name="value_sort_date">publishedAt</string>

    <string name="pref_country_key" translatable="false">country</string>

    <string name="pref_pageSize_key">pageSize</string>
    <string name="pref_pageSize_defaultValue">20</string>

    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">News Notifications</string>
    <string name="appwidget_text">ABNR News</string>
    <string name="add_widget">Add widget</string>
    <string name="no_internet_connection">There is no internet connection !</string>
    <string name="run_search_here">You can run your searches here ! Check also 
        the Settings to see options .</string>

    <string name="share_link_chooser">Share Link</string>
    <string name="list_item_image_contentDescription">Displays the article image returned by query.</string>
    <string name="article_name_placeholder">Article Name Placeholder</string>
    <string name="source_name_placeholder">BBC News Placeholder</string>
    <string name="list_item_date_placeholder">26.07.2018</string>
    <string name="widget_image_content_description">Visual placeholder for future upgrades.</string>
    <string name="query_hint_text">Search for news</string>
    <string name="searchView_tooltip_text">Search for news here</string>
    <string name="no_article_description_text">No description available !</string>
    <string name="fab_contentDescription">Button used to share the current article link by mail or social media.</string>
    <string name="notification_contentText">There are new articles waiting for you !</string>
    <string name="settings_title">Settings</string>
    <string name="pref_language_key">Language</string>
    <string name="pref_title_sortBy">Sort By</string>
    <string name="share_link_message">Sent from ABNR News : </string>

</resources>
