<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="8dp"
    android:orientation="vertical"
    android:background="@color/cardview_light_background"
    app:layout_collapseMode="parallax"
    app:layout_collapseParallaxMultiplier="0.7">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0.30">

    <ImageView
        android:id="@+id/image"
        android:layout_height="@dimen/cardview_image_height"
        android:layout_width="match_parent"
        android:contentDescription="@string/list_item_image_contentDescription"
        android:gravity="top"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/newspaper_resized" />

        <TextView
            android:id="@+id/article_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/list_item_padding"
            android:layout_below="@+id/image"
            android:text="@string/article_name_placeholder"
            android:textSize="@dimen/list_item_title_textSize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/article_name"
            android:padding="@dimen/list_item_padding" />

        <TextView
            android:id="@+id/source_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_below="@id/description"
            android:padding="@dimen/list_item_padding"
            android:text="@string/source_name_placeholder" />

        <TextView
            android:id="@+id/article_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/source_name"
            android:gravity="bottom"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/description"
            android:layout_marginEnd="@dimen/list_item_date_margin"
            android:layout_marginLeft="@dimen/list_item_date_margin"
            android:layout_marginRight="@dimen/list_item_date_margin"
            android:layout_marginStart="@dimen/list_item_date_margin"
            android:padding="@dimen/list_item_padding"
            android:text="@string/list_item_date_placeholder" />

    </RelativeLayout>


</android.support.v7.widget.CardView>