<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/list_item_padding"
        android:layout_marginStart="@dimen/list_item_padding"
        android:layout_marginTop="@dimen/list_item_padding"
        android:background="@color/primaryColorABNR"
        android:tooltipText="@string/searchView_tooltip_text"
        android:focusedByDefault="true"
        app:queryHint="@string/query_hint_text" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/myNews_recyclerview"
        android:layout_below="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/list_item_padding">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/search_articles_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/no_internet_text_margin"
        android:background="@color/background_material"
        android:padding="@dimen/list_item_date_margin"
        android:paddingBottom="@dimen/no_internet_text_padding"
        android:paddingTop="@dimen/no_internet_text_padding"
        android:text="@string/run_search_here"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/myNews_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>